# my-project

./: .env.example  .gitignore  README.md  docker-compose.yml  index.html
backend/: Dockerfile  pyproject.toml
backend/app/: config.py  database.py  main.py  models.py  schemas.py
backend/app/routers/: chat.py  conversations.py
backend/app/services/: llm_service.py  mcp_client.py
css/: styles.css
db/: init.sql
frontend/: Dockerfile  index.html  nginx.conf  package.json
frontend/src/: App.css  App.jsx  index.css
frontend/src/components/: ChatInput.css  ChatInput.jsx  ChatWindow.css  ChatWindow.jsx  MessageBubble.css  MessageBubble.jsx  Sidebar.css  Sidebar.jsx  SourceCard.css  SourceCard.jsx  ThinkingAnimation.css  ThinkingAnimation.jsx  ToolIndicator.css  ToolIndicator.jsx
frontend/src/hooks/: useChat.js  useConversations.js
js/: admin.js  app.js  auth.js  complaints.js  dashboard.js  utils.js
mcp-server/: Dockerfile  pyproject.toml
mcp-server/server/: config.py  main.py
mcp-server/server/tools/: __init__.py  db_analyze.py  db_query.py  summarize.py  web_search.py
