[project]
name = "aiplatform-backend"
version = "0.1.0"
description = "FastAPI backend for AI Chat Platform with MCP client integration"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.30.0",
    "pydantic-settings>=2.0.0",
    "fastmcp>=2.0.0",
    "mistralai>=1.0.0",
    "sse-starlette>=2.0.0",
    "httpx>=0.27.0",
]
