[project]
name = "aiplatform-mcp-server"
version = "0.1.0"
description = "MCP Server with web search, database query, analysis, and summarization tools"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=2.0.0",
    "httpx>=0.27.0",
    "asyncpg>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "google-search-results>=2.4.2",
    "uvicorn[standard]>=0.34.0",
    "pydantic-settings>=2.0.0",
]
